--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
           <div class="date">2008</div>
           <h3>University of Wolverhampton</h3>
           <h4>Master's Degree, Software Technology</h4>
-          <p>Second semester of the Master's programm at Leuphana Universiät Lüneburg</p>
+          <p>Second semester of the Master's program at Leuphana Universität Lüneburg</p>
         </li>
 
         <li class="box">
