Added Grunt and Sass files

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href='http://fonts.googleapis.com/css?family=Merriweather+Sans:300,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="lauenroth.css">
+  <link rel="stylesheet" href="styles/responsive.css">
   <link rel="image_src" href="images/jl_logo.png">
   <meta property="og:url" content="http://joerg.lauenroth.org">
   <meta property="og:title" content="Jörg Lauenroth">
@@ -117,7 +118,7 @@
         <h4>Miscellaneous</h4>
         <ul>
           <li><a href="http://git-scm.com/">Git</a>, <a href="https://jazz.net/products/rational-team-concert/">RTC</a></li>
-          <li><a href="http://gruntjs.com/">Grunt</a>, <a href="http://yeoman.io/">Yeoman</a></li>
+          <li><a href="http://yeoman.io/">Yeoman</a>, <a href="http://gruntjs.com/">Grunt</a></li>
           <li><a href="http://getbootstrap.com/">Bootstrap</a></li>
           <li>Server administration</li>
           <li>UML</li>
