job at Fujitsu ended

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
       </div></div>
 
-      <p class="hey">Hey there! My name is <strong>Jörg Lauenroth</strong> and I was born and raised in <strong>Berlin</strong>, Germany. But for the past 7 years, I've been living in <strong>Brussels</strong>, Belgium.</p>
+      <p class="hey">Hey there! My name is <strong>Jörg Lauenroth</strong> and I was born and raised in <strong>Berlin</strong>, Germany. But for the past 6.5 years, I've been living in <strong>Brussels</strong>, Belgium.</p>
       <p class="passion">My passion is <strong>app development</strong> - especially using <strong>web technologies</strong>. With over <strong>10 years</strong> of experience in <strong>frontend</strong> and <strong>backend</strong> development, I built <strong>numerous apps</strong> and <strong>websites</strong> over the past years.</p>
 
       <p class="hobbies">When I am not coding, I love playing the <strong>guitar</strong>, <strong>cooking</strong> or <strong>baking</strong> delicious stuff, <strong>travelling</strong> the world and particularly spending some time with my lovely <strong>daughter</strong> and <strong>wife</strong>.</p>
@@ -287,7 +287,7 @@
       </div>
       <ul class="timeline">
         <li class="box">
-          <div class="date">Since 02/2011</div>
+          <div class="date">02/2011 - 03/2015</div>
           <h3>Fujitsu Technology Solutions</h3>
           <h4>Senior Analyst Programmer,<br>Technical Team Leader</h4>
           <ul>
