Job at InThePocket added

--- a/index.html
+++ b/index.html
@@ -283,9 +283,15 @@
         <p>In April 2005, I reduced my work for Netzkreationen and started a job at <strong>T-System</strong> GEI GmbH. The focus there was to intregate an e-Commerce system into an existing e-Government platform.</p>
         <p>A year later in April 2006, I switched to another company called <strong>]init[ AG</strong> für Digitale Kommunikation. My main task there was to merge a political discussion forum with a news portal.  I also helped improving the company's own content management system.</p>
         <p>After finishing my Master's Degree, I started working as a <strong>Freelancer</strong> in June 2010. The first seven months, I was working for <strong>Unisys</strong> in the European Commission (DG Relex) - mainly on Drupal based application.</p>
-        <p>Since February 2011, I am working for <strong>Fujitsu Technology Solutions</strong> at the European External Action Service. Over the years, I developed more than 15 different information systems (e.g. the intranet or systems for booking meeting rooms, borrowing equipment, ordering business cards, archiving documents or communication platforms) mainly in Drupal or Symfony.</p>
+        <p>From February 2011 on, I was working for <strong>Fujitsu Technology Solutions</strong> at the European External Action Service. Over the years, I developed more than 15 different information systems (e.g. the intranet or applications for booking meeting rooms, borrowing equipment, ordering business cards, archiving documents or communication platforms) mainly in Drupal and Symfony.</p>
+        <p>In April 2015 I am starting my new job at the Gent-based mobile agency <strong>In The Pocket</strong>.
       </div>
       <ul class="timeline">
+        <li class="box">
+          <div class="date">Starting 04/2015</div>
+          <h3><a href="https://inthepocket.mobi">In The Pocket</a></h3>
+          <h4>Senior Web Developer</h4>
+        </li>
         <li class="box">
           <div class="date">02/2011 - 03/2015</div>
           <h3>Fujitsu Technology Solutions</h3>
