I now know Ember, live 7 years in Brussels and have been working for ITP since April

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
       </div></div>
 
-      <p class="hey">Hey there! My name is <strong>Jörg Lauenroth</strong> and I was born and raised in <strong>Berlin</strong>, Germany. But for the past 6.5 years, I've been living in <strong>Brussels</strong>, Belgium.</p>
+      <p class="hey">Hey there! My name is <strong>Jörg Lauenroth</strong> and I was born and raised in <strong>Berlin</strong>, Germany. But for the past 7 years, I've been living in <strong>Brussels</strong>, Belgium.</p>
       <p class="passion">My passion is <strong>app development</strong> - especially using <strong>web technologies</strong>. With over <strong>10 years</strong> of experience in <strong>frontend</strong> and <strong>backend</strong> development, I built <strong>numerous apps</strong> and <strong>websites</strong> over the past years.</p>
 
       <p class="hobbies">When I am not coding, I love playing the <strong>guitar</strong>, <strong>cooking</strong> or <strong>baking</strong> delicious stuff, <strong>travelling</strong> the world and particularly spending some time with my lovely <strong>daughter</strong> and <strong>wife</strong>.</p>
@@ -86,7 +86,7 @@
           <li>PHP <span>(10 years)</span><br>
           <span><a href="https://www.drupal.org/">Drupal</a>, <a href="http://symfony.com/">Symfony</a>, <a href="http://laravel.com/">Laravel</a>, <a href="https://ellislab.com/codeigniter">CodeIgniter</a>, <a href="http://cakephp.org/">CakePHP</a>, <a href="https://wordpress.org/">Wordpress</a></span></li>
           <li>JavaScript <span>(12 years)</span><br>
-          <span><a href="https://www.meteor.com/">Meteor</a>, <a href="http://jquery.com/">jQuery</a>, <a href="https://angularjs.org/">AngularJS</a></span></li>
+          <span><a href="https://www.meteor.com/">Meteor</a>, <a href="http://jquery.com/">jQuery</a>, <a href="http://emberjs.com/">Ember</a>, <a href="https://angularjs.org/">AngularJS</a></span></li>
           <li>Java <span>(3 years)</span></li>
           <li>C# <span>(1 year)</span></li>
         </ul>
@@ -284,11 +284,11 @@
         <p>A year later in April 2006, I switched to another company called <strong>]init[ AG</strong> für Digitale Kommunikation. My main task there was to merge a political discussion forum with a news portal.  I also helped improving the company's own content management system.</p>
         <p>After finishing my Master's Degree, I started working as a <strong>Freelancer</strong> in June 2010. The first seven months, I was working for <strong>Unisys</strong> in the European Commission (DG Relex) - mainly on Drupal based application.</p>
         <p>From February 2011 on, I was working for <strong>Fujitsu Technology Solutions</strong> at the European External Action Service. Over the years, I developed more than 15 different information systems (e.g. the intranet or applications for booking meeting rooms, borrowing equipment, ordering business cards, archiving documents or communication platforms) mainly in Drupal and Symfony.</p>
-        <p>In April 2015 I am starting my new job at the Gent-based mobile agency <strong>In The Pocket</strong>.
+        <p>In April 2015 I started working at the Gent-based award-winning mobile agency <strong>In The Pocket</strong>.
       </div>
       <ul class="timeline">
         <li class="box">
-          <div class="date">Starting 04/2015</div>
+          <div class="date">Since 04/2015</div>
           <h3><a href="https://inthepocket.mobi">In The Pocket</a></h3>
           <h4>Senior Web Developer</h4>
         </li>
@@ -434,24 +434,6 @@
         <div class="pic"><div data-pics="ski-lift.jpg" data-path="images/hobbies/">
           <img src="images/hobbies/ski.jpg" alt="">
         </div></div>
-      </section>
-
-      <section>
-        <h3>G33ky Stuff</h3>
-        <div class="pic">
-          <div data-pics="RaspberryPI.jpg" data-path="images/geek/">
-            <img src="images/geek/MakeyMakey.jpg" alt="Makey Makey">
-          </div>
-        </div>
-        
-      </section>
-
-      <section class="blog">
-        <h3>My Blog</h3>
-        <a href="http://talk-about.it">
-          <span>talk-about.it</span>
-          <img src="images/hobbies/blog.jpg" alt="Talk About IT">
-        </a>
       </section>
 
       <div class="clear"></div>
